Add questions and delete questions

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <div class="nav" ng-controller="NavBarCtrl">
     <div class="admin" ng-if="is_admin">
       <a href="/">survey</a>
-      <a href="/admin">results</a>
+      <a href="/admin">admin</a>
     </div>
     <meteor-include src="loginButtons"></meteor-include>
   </div>
