Radio buttons are a pain

--- a/client/js/admin/directives/add-question.ng.html
+++ b/client/js/admin/directives/add-question.ng.html
@@ -1,9 +1,16 @@
-<button ng-click="showAddQuestionForm = !showAddQuestionForm" ng-hide="showAddQuestionForm">
+<button ng-click="showAddQuestionForm = !showAddQuestionForm; addingQuestion()" ng-hide="showAddQuestionForm">
 Add a question
 </button>
 
 <form ng-show="showAddQuestionForm">
   <h1>Add a question:</h1>
+  <div class="form-align-group">
+    <label>Type: </label>
+    <select ng-options="option.type as option.type for option in questionTypes"
+      ng-model="question.type"
+      required>
+    </select>
+  </div>
   <div class="form-align-group">
     <label>Question: </label>
     <input type="text"
@@ -15,13 +22,12 @@ Add a question
     <input type="text"
       ng-model="question.helpText"/>
   </div>
-  <div class="form-align-group">
-    <label>Type: </label>
-    <select ng-options="option.type as option.type for option in questionTypes"
-      ng-model="question.type"
-      required>
-    </select>
-  </div>
+
+  <div ng-if="question.type === 'radio'"
+    class="add-checkbox-question-options"
+    add-radio-question-options
+    question="question"
+  ></div>
   <div class="form-align-group">
     <label>Required? </label>
     <input type="checkbox" ng-model="question.required"/>
