--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     </div>
     <meteor-include src="loginButtons"></meteor-include>
   </div>
-  <div ui-view class="container" ng-if="!loggingIn"></div>
+  <div ui-view
+    class="container"
+    ng-class="{ admin: $state.includes('admin') }"
+    ng-if="!loggingIn"></div>
 </body>
