Add initial tests. Perform initial tota11y checks. Add some more sensible UX to add question form.

--- a/client/js/admin/directives/add-radio-question-options.ng.html
+++ b/client/js/admin/directives/add-radio-question-options.ng.html
@@ -1,12 +1,15 @@
 <ul>
   <li ng-repeat="option in question.options | orderBy:'type' track by $index">
     <div class="form-align-group" ng-if="option.type === 'normal'">
-      <label><input type="radio" disabled/></label>
-      <input type="text" ng-model="option.value" placeholder="Write something">
+      <label for="{{ }}"><input type="radio" disabled/></label>
+      <input id="{{ }}"
+        type="text"
+        ng-model="option.value"
+        placeholder="Write something">
     </div>
     <div class="form-align-group" ng-if="option.type === 'other'">
-      <label>Other: </label>
-      <input type="text" disabled>
+      <label for="{{ }}-other">Other: </label>
+      <input id="{{ }}-other" type="text" disabled>
     </div>
   </li>
 </ul>
