--- a/client/js/admin/directives/add-question.ng.html
+++ b/client/js/admin/directives/add-question.ng.html
@@ -1,26 +1,29 @@
-<button ng-click="showAddQuestionForm = !showAddQuestionForm; addingQuestion()" ng-hide="showAddQuestionForm">
-Add a question
-</button>
+<a ng-click="showAddQuestionForm = !showAddQuestionForm; addingQuestion()" ng-hide="showAddQuestionForm">
+Add a question <i class="icon-chevron-down"></i>
+</a>
 
-<form ng-show="showAddQuestionForm">
-  <h1>Add a question:</h1>
+<form ng-show="showAddQuestionForm" name="addQuestion">
+  <h1>Create a new question:</h1>
   <div class="form-align-group">
-    <label>Type: </label>
+    <label for="new-question-type">Type: </label>
     <select ng-options="option.type as option.type for option in questionTypes"
       ng-model="question.type"
-      required>
+      required
+      id="new-question-type">
     </select>
   </div>
   <div class="form-align-group">
-    <label>Question: </label>
+    <label for="new-question-question">Question: </label>
     <input type="text"
       ng-model="question.question"
-      required/>
+      required
+      id="new-question-question"/>
   </div>
   <div class="form-align-group">
-    <label>Help Text: </label>
+    <label for="new-question-help-text">Help Text: </label>
     <input type="text"
-      ng-model="question.helpText"/>
+      ng-model="question.helpText"
+      for="new-question-help-text"/>
   </div>
 
   <div ng-if="question.type === 'radio'"
@@ -29,13 +32,14 @@ Add a question
     question="question"
   ></div>
   <div class="form-align-group">
-    <label>Required? </label>
-    <input type="checkbox" ng-model="question.required"/>
+    <label for="new-question-is-required">Required? </label>
+    <input type="checkbox" ng-model="question.required" id="new-question-is-required"/>
   </div>
   <div class="form-align-group">
-    <button ng-click="addQuestion(question)">Add Question
+    <button ng-click="addQuestion(question)" ng-disabled="addQuestion.$invalid">Create Question
     </button>
-    <button class="secondary" ng-click="showAddQuestionForm = false">Cancel
-    </button>
+    <a class="cancel" ng-click="showAddQuestionForm = false">
+      <i class="icon-cross"></i>Cancel
+    </a>
   </div>
 </form>
