--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
   <footer class="site-footer">
     <div class="wide-row footer-wrapper">
-      <img src="/images/squirrel-small.png"/>
+      <img src="/images/squirrel-small.png" alt="Quick Survey Squirrel Logo"/>
       <p>Powered by Quick-Survey, a self-hosted, easy-to-install survey tool that you control and own. Get started on <a href="https://github.com/simonv3/quick-survey"><i class="icon-github"></i> GitHub</a>.
       </p>
     </div>
