--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       <a href="/">survey</a>
       <a href="/admin">admin</a>
     </div>
-    <span ng-if="!$state.current.name === 'setup'">
-      <meteor-include src="loginButtons"></meteor-include>
+    <span ng-if="state.current.name !== 'setup'">
+      <meteor-include src="loginButtons">
+      </meteor-include>
     </span>
   </div>
   <div ui-view
