Fix survey checkboxes

--- a/client/js/admin/directives/add-question-with-options.ng.html
+++ b/client/js/admin/directives/add-question-with-options.ng.html
@@ -13,5 +13,5 @@
     </div>
   </li>
 </ul>
-<a ng-click="addOption()"><i class="icon-plus"></i> Add option</a>
-<a ng-click="addOther()"><i class="icon-plus"></i> Add "other"</a>
+<a class="option-control" ng-click="addOption()"><i class="icon-plus"></i> Add option</a>
+<a class="option-control" ng-click="addOther()"><i class="icon-plus"></i> Add "other"</a>
