--- a/client/js/manage/directives/add-question.ng.html
+++ b/client/js/manage/directives/add-question.ng.html
@@ -1,4 +1,4 @@
-<a ng-click="showAddQuestionForm = !showAddQuestionForm; addingQuestion()" ng-hide="showAddQuestionForm">
+<a ng-click="showAddQuestionForm = !showAddQuestionForm;" ng-hide="showAddQuestionForm">
 Add a question <i class="icon-chevron-down"></i>
 </a>
 
