--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
         <a href="/manage">manage</a>
         <a ng-if="!on_sandstorm" href="/admin">admin</a>
       </div>
-      <div ng-show="!on_sandstorm" mr-account-buttons></div>
+      <div ng-show="on_sandstorm === false" mr-account-buttons></div>
 
     </div>
     <div ui-view
