Make HREF a target=_blank. Close #24

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,10 @@
   <footer class="site-footer">
     <div class="wide-row footer-wrapper">
       <img src="/images/squirrel-small.png" alt="Quick Survey Squirrel Logo"/>
-      <p>Powered by Quick-Survey, a self-hosted, easy-to-install survey tool that you control and own. Get started on <a href="https://github.com/simonv3/quick-survey"><i class="icon-github"></i> GitHub</a>.
+      <p>Powered by Quick-Survey, a self-hosted, easy-to-install survey tool that you control and own. Get started on
+      <a href="https://github.com/simonv3/quick-survey" target="_blank">
+        <i class="icon-github"></i> GitHub
+      </a>.
       </p>
     </div>
   </footer>
