Firs steps in adding an end-note. Related to #21.

--- a/client/js/manage/directives/edit-survey-details.ng.html
+++ b/client/js/manage/directives/edit-survey-details.ng.html
@@ -1,20 +1,24 @@
-<td>
-  <label for="survey-name" class="hidden"></label>
-  <textarea id="survey-name" ng-model="survey.name"></textarea>
-</td>
-<td>
-  <label for="survey-description" class="hidden"></label>
+<div class="form-align-group">
+  <label for="survey-name">Name:</label>
+  <input id="survey-name" ng-model="survey.name" type="text">
+</div>
+<div class="form-align-group">
+  <label for="survey-description">Description:</label>
   <textarea id="survey-description" ng-model="survey.description"></textarea>
-</td>
-<td>
-  <label for="survey-is-active" class="hidden"></label>
+</div>
+<div class="form-align-group">
+  <label for="survey-end-note">End note:</label>
+  <textarea id="survey-end-note" ng-model="survey.endNote"></textarea>
+</div>
+<div class="form-align-group">
+  <label for="survey-is-active">Is it active?</label>
   <input id="survey-is-active" type="checkbox" ng-model="survey.active"/>
-</td>
-<td>
-  <label for="survey-requires-sign-in" class="hidden"></label>
+</div>
+<div class="form-align-group">
+  <label for="survey-requires-sign-in">Does it require sign in?</label>
   <input id="survey-requires-sign-in" type="checkbox" ng-model="survey.require_sign_in"/>
-</td>
-<td>
+</div>
+<div class="form-align-group">
   <span ng-if="!form.$pristine">Save your changes!</span>
   <button ng-click="save(survey)">Save</button>
-</td>
+</div>
