--- a/client/js/manage/directives/manage-survey.ng.html
+++ b/client/js/manage/directives/manage-survey.ng.html
@@ -1,22 +1,12 @@
 <form ng-if="survey" class="survey-details" name="surveyForm">
   <h2>Survey Details</h2>
-  <table>
-    <thead>
-      <tr>
-        <th class="name">Name</th>
-        <th class="description">Description</th>
-        <th>Active</th>
-        <th>Require Sign In?</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr edit-survey-details
-        survey="survey"
-        form="surveyForm">
-      </tr>
-    </tbody>
-  </table>
+
+  <div>
+    <div edit-survey-details
+      survey="survey"
+      form="surveyForm">
+    </div>
+  </div>
 </form>
 <div class="questions">
 <h2>Survey Questions</h2>
