Add feedback on survey save, add 'manage' share option
Close #37
Close #31

--- a/client/js/manage/directives/edit-survey-details.ng.html
+++ b/client/js/manage/directives/edit-survey-details.ng.html
@@ -24,9 +24,8 @@
 </div>
 <div class="form-align-group">
   <div class="offset">
-
     <button class="submit" ng-click="save(survey)">Save</button>
     <span class="inform" ng-if="!form.$pristine">Save your changes!</span>
+    <i ng-if="saved" class="icon-check"></i>
   </div>
-
 </div>
