--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <div class="page-wrap">
     <div class="nav" ng-controller="NavBarCtrl">
       <div class="admin" ng-if="is_admin">
+        Hey {{ Meteor.sandstormUser().name }}!
         <a href="/">survey</a>
         <a href="/manage">manage</a>
         <a ng-if="!on_sandstorm" href="/admin">admin</a>
