Clarify share information. Close #35

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,6 @@
   <div class="page-wrap">
     <div class="nav" ng-controller="NavBarCtrl">
       <div class="admin" ng-if="is_admin">
-        Hey {{ Meteor.sandstormUser().name }}!
         <a href="/">survey</a>
         <a href="/manage">manage</a>
         <a ng-if="!on_sandstorm" href="/admin">admin</a>
@@ -29,10 +28,10 @@
   <footer class="site-footer">
     <div class="wide-row footer-wrapper">
       <img src="/images/squirrel-small.png" alt="Quick Survey Squirrel Logo"/>
-      <p>Powered by Quick-Survey, a self-hosted, easy-to-install survey tool that you control and own. Get started on
+      <p>Powered by Quick-Survey an easy-to-install survey tool that you control and own. Get started on
       <a href="https://github.com/simonv3/quick-survey" target="_blank">
         <i class="icon-github"></i> GitHub
-      </a>.
+      </a>. Thanks Sandstorm!
       </p>
     </div>
   </footer>
