Add prettier save button and questions

--- a/client/js/manage/directives/edit-survey-details.ng.html
+++ b/client/js/manage/directives/edit-survey-details.ng.html
@@ -24,8 +24,13 @@
 </div>
 <div class="form-align-group">
   <div class="offset">
-    <button class="submit" ng-click="save(survey)">Save</button>
+    <save-button
+      click-event="save"
+      text="'Save'"
+      saved-indicator="saved">
+    </save-button>
+    <!-- <button class="submit" ng-click="save(survey)">Save</button> -->
     <span class="inform" ng-if="!form.$pristine">Save your changes!</span>
-    <i ng-if="saved" class="icon-check"></i>
+
   </div>
 </div>
