--- a/client/js/manage/directives/question-details.ng.html
+++ b/client/js/manage/directives/question-details.ng.html
@@ -1,5 +1,6 @@
 
 <div class="question-overview">
+  <span ui-tree-handle class="icon-align-vertical-middle"></span>
   {{ question.question }}
 
   <div class="manage-questions">
