Close #51. Add check that there are at least two radio button options for a survey.

--- a/client/js/directives/save-button.html
+++ b/client/js/directives/save-button.html
@@ -1,4 +1,5 @@
-<button ng-click="vm.clickEvent()">
+<button ng-click="vm.clickEvent()"
+  ng-disabled="vm.disabled">
   {{ vm.text }}
   <i ng-if="vm.savedIndicator" class="icon-check"></i>
 </button>
