--- a/client/js/manage/directives/question-details.ng.html
+++ b/client/js/manage/directives/question-details.ng.html
@@ -53,6 +53,7 @@
     </div>
     <div class="form-align-group">
       <save-button
+        disabled="isDisabled(question)"
         click-event="save"
         text="'Save Changes'"
         saved-indicator="saved">
